# DiscGolfFlask

./: .gitignore  app.py  backup_data.py  config.py  countries.py  countries.txt  db.py  event_results.py  events.py  filtered_data.py  models.py  player_photos.py  players.py  pyproject.toml  requirements.txt  states.py  streamlit_app.py  streamlit_dg.py  streamlit_dg_admin.py  tournaments.py
.devcontainer/: devcontainer.json
UI/: local_data.py  streamlit_app.py
controller/: country.py  event.py  event_pdga.py  player.py  player_scrape_pdga_id.py  season.py  tournament.py
templates/: dg2.html  streamlit.html
