[tool.poetry]
name = "discgolfflask"
version = "0.0.1"
authors = ["Mark Bernacki <bernackimark@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
blinker = "1.7.0"
click = "8.1.7"
Flask = "3.0.3"
greenlet = "3.0.3"
gunicorn = "21.2.0"
itsdangerous = "2.1.2"
Jinja2 = "3.1.3"
MarkupSafe = "2.1.5"
packaging = "24.0"
psycopg2-binary = "2.9.9"
SQLAlchemy = "2.0.29"
typing_extensions = "4.11.0"
Werkzeug = "3.0.2"

[tool.poetry.dev-dependencies]
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"