[project]
name = "discgolfflask"
version = "0.0.2"
authors = ["Mark Bernacki <bernackimark@gmail.com>"]
license = "MIT"
requires-python = "^3.9"
dependencies = ["blinker==1.7.0",
"bs4==0.0.2",
"click==8.1.7",
"Flask==3.0.3",
"greenlet==3.0.3",
"gunicorn==21.2.0",
"itsdangerous==2.1.2",
"Jinja2==3.1.3",
"MarkupSafe==2.1.5",
"packaging==24.0",
"psycopg2-binary==2.9.9",
"streamlit==1.33.0",
"SQLAlchemy==2.0.29",
"typing_extensions==4.11.0",
"Werkzeug==3.0.2"]

[project.optional-dependencies]
python-dotenv = "1.0.1"
